2021-02-16  Giacomo Nannicini <nannicini@us.ibm.com>
	Version 4.2.2 released.
	* rbfopt_aux_problems.py (ga_optimize): fixed bug that ignored
	integrality restrictions in some cases where categorical variables
	were at the end of array of variables.

2020-08-13  Giacomo Nannicini <nannicini@us.ibm.com>
	Version 4.2.1 released.
	* rbfopt_settings.py (set_auto_parameters): fixed bug that turned
	on affine scaling on certain conditions.
	* rbfopt_utils.py (get_lhd_maximin_points, get_lhd_corr_points):
	fixed bug that modified bounds on integer variables.
	* Changed:
	rbfopt_utils.transform_domain() functions now require list of
	integer variables as one of the arguments.
	
2020-06-26  Giacomo Nannicini <nannicini@us.ibm.com>
	Version 4.2.0 released.
	* Added:
	Support for categorical variables (variable type 'C', in addition
	to 'R' for real and 'I' for integer). These variables are treated
	differently from integer variables, but they still need to have
	lower and upper bounds; e.g., a categorical variable with bounds
	[0, 2] can take on 3 possible values: 0, 1, 2.
	* Changed:
	Renamed parameter names starting with 'tr' to 'ref', for better
	consistency with the literature.

2019-04-08  Giacomo Nannicini  <nannicini@us.ibm.com>
	Version 4.1.1 released.
	* rbfopt_utils.py (initialize_nodes): fixed bug with sample_size
	not cast to integer.
	
2019-03-14  Giacomo Nannicini  <nannicini@us.ibm.com>
	Version 4.1.0 released.
	* Added:
	Finer control of the optimization process, via several options:
	init_include_midpoint, init_sample_fraction, do_local_search.
	* Changed:
	More efficient initialization phase, requiring fewer points.

2019-03-05  Giacomo Nannicini  <nannicini@us.ibm.com>
	* rbfopt_utils.py (initialize_nodes): more flexibility in choosing
	the number of sample points, and adding the midpoint.
	* rbfopt_utils.py (init_points_cleanup): added function to
	eliminate duplicate points in initialization.