@@ -1,6 +1,2 @@
 [bdist_wheel]
 universal=1
-
-[nosetests]
-ignore-files=test_rbfopt_algorithm_slow.py
-verbosity=2
