@@ -1,0 +1,13 @@
+# test on Python 2.7, 3.7, 3.10
+[tox]
+envlist = py27,py37,py310
+
+[testenv]
+deps =
+    nose2
+    numpy
+    scipy
+    pyomo >= 4.3.11388
+commands =
+    nose2
+    nose2 tests.slow_test_rbfopt_algorithm
