@@ -1,3 +1,9 @@
+2022-02-24  Giacomo Nannicini <nannicini@us.ibm.com>
+	Added tox to the test workflow.
+	Moved tests to nose2.
+	* rbfopt_algorith.py (optimize_parallel): fixed bug that could
+	occur when using many threads and the noisy function evaluatio.
+
 2021-02-16  Giacomo Nannicini <nannicini@us.ibm.com>
 	Version 4.2.2 released.
 	* rbfopt_aux_problems.py (ga_optimize): fixed bug that ignored
